Bug 1815802 - Make `Selection::AddRangeJS` do nothing if adding range instance belongs to the `Selection` r=jjaschke

`Selection` stores given ranges directly if and only if it's possible.
Therefore, adding a range which is already in the array of `Selection` ranges
needs to do nothing.

Differential Revision: https://phabricator.services.mozilla.com/D169301